# pyvcontrold-net

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
docs/: changelog.html  configuration.html  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  usage.html  vcontrold.html
docs/_static/: basic.css  nature.css
src/vcontrold/: _vcontrold_config.py  vcontrold.py  vcontrold_config.py
src/vcontrold/templates/: conf.j2.yml
