[metadata]
name = pyvcontrold-tsvsj
version = 0.0.1
author = Sven Schaefer
author_email = tsvsjoj@gamil.com
description = A small library to interact with vcontrold (openv).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsvsj/pyvcontrold
project_urls =
    Bug Tracker = https://github.com/tsvsj/pyvcontrold/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src